[tool.poetry]
name = "cybsi-cloud-sdk"
version = "1.1.0"
description = "Cybsi Cloud development kit"
authors = ["Cybsi Cloud developers"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "cybsi" },
]
include = ["cybsi/py.typed"]


[tool.poetry.dependencies]
python = ">=3.8.1,<4"
enum-tools = "0.11.0"
httpx = "^0.25.1"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
black = "23.10.1"
flake8 = "6.1.0"
isort = "5.12.0"
mypy = "1.6.1"
pytest = "^7.4.3"
tbump = "6.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]

[tool.tbump]

[tool.tbump.version]
current = "1.1.0"

regex = '''
  ^
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<extra>[ab]\d+)?
  $
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "cybsi/__version__.py"

[[tool.tbump.before_commit]]
name = "Update changelog and check if it contains new version"
cmd = "./update-changelog.sh {new_version}"
